# capstone-project

./: .gitignore  .gitmodules  Capstone.postman_collection.json  Cargo.toml  README.md  Review-Board.postman_collection.json  docker-compose.yml  init-tasks-db.sql
.github/workflows/: ci_pipeline.yml
EchoServer/: Dockerfile  Procfile  README.md  build.gradle  settings.gradle
EchoServer/src/main/java/: Main.java  Routes.java
EchoServer/src/main/java/site/bmraubo/echo_server_endpoints/: Doggo.java  EchoBody.java  HTMLResponse.java  HeadRequest.java  HealthCheck.java  JSONResponse.java  Kisses.java  Kitteh.java  MethodNotAllowed.java  MethodOptions.java  MethodOptions2.java  Redirect.java  RetrieveAllTasks.java  RetrieveTask.java  SimpleGet.java  SimpleGetWithBody.java  TextResponse.java  ToDo.java  XMLResponse.java
EchoServer/src/main/java/site/bmraubo/http_server/: BadRequest.java  Connection.java  ConnectionWrapper.java  Endpoint.java  ErrorHandler.java  Request.java  RequestBuilder.java  ResourceNotFound.java  Response.java  ResponseBuilder.java  Router.java  Server.java  ServerError.java  TimeoutError.java
EchoServer/src/main/java/site/bmraubo/todo/: Task.java  (+4 more)
EchoServer/src/test/java/: RoutesFake.java  TestDummy.java  TestFeatures.java
docker/: init-user-db.sql
gateway/: Cargo.toml  Dockerfile  Procfile  Rocket.toml
gateway/src/: authentication.rs  main.rs  send_to_service.rs  tasklist_operations.rs
user_service/: Cargo.toml  Dockerfile  Procfile  Rocket.toml
user_service/src/: basic_authentication.rs  credentials_storage.rs  main.rs  password.rs
(+14 files in other folders)
