[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="0.5.0-rc.1", features=["json"]}
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
base64 = "0.13.0"
dotenv = "0.15.0"

[dev-dependencies]
httpmock = "0.6"