[package]
name = "user_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="0.5.0-rc.1", features=["json"]}
tokio-postgres = "0.7.5"
tokio = "1.17.0"
dotenv = "0.15.0"

[dev-dependencies]
serial_test = "0.6.0"
